--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@
 
 /*quinta pantalla*/
 .five_screen{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.86)), url('../img/fondo_compartir.JPG');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.86)), url('../img/fondo_fuertes.JPG');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -339,7 +339,7 @@
 
 /*sexta pantalla*/
 .six_screen{
-    background-image: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, 0.99)), url('../img/fondo_compartir2.JPG');
+    background-image: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, 0.99)), url('../img/fondo_fuertes2.JPG');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -349,7 +349,7 @@
 
 /*quinta pantalla*/
 .seven_screen{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.86)), url('../img/fondo_fuertes.JPG');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.86)), url('../img/fondo_fuertes3.JPG');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -357,7 +357,7 @@
 }
 
 .eigth_screen{
-    background-image: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, 0.99)), url('../img/fondo_fuertes2.JPG');
+    background-image: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, 0.99)), url('../img/fondo_compartir.JPG');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -365,7 +365,7 @@
 }
 
 .nine_screen{
-    background-image: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, 0.99)), url('../img/fondo_fuertes3.JPG');
+    background-image: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, 0.99)), url('../img/fondo_compartir2.JPG');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
